Now we can get the 5 most recent works

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@fastify/cookie": "8.3.0",
+    "@fastify/cors": "8.3.0",
     "@fastify/jwt": "7.0.0",
     "@prisma/client": "4.14.1",
     "bcryptjs": "2.4.3",
